# KMEANS

./: .gitignore  CMakeLists.txt  README.md
include/: csv.h  data.h  point.h  point2d.h  point3d.h
resources/: 2d_input.csv  2d_output.csv  3d_output.csv  out.csv  output.csv
scripts/: graph.py
src/: main.cpp  output.csv
